--- a/cloud-provider-payment8001/pom.xml
+++ b/cloud-provider-payment8001/pom.xml
@@ -60,10 +60,10 @@
         </dependency>
 
         <!--  zipkin相关依赖-->
-       <!-- <dependency>
+        <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-zipkin</artifactId>
-        </dependency>-->
+        </dependency>
 
       <!--  <dependency>
             <groupId>org.springframework.boot</groupId>
